--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.3.0",
     "pinia": "^2.0.36",
+    "sass": "^1.63.4",
     "vue": "^3.3.2",
+    "vue-datepicker": "^1.3.0",
     "vue-router": "^4.2.0"
   },
   "devDependencies": {
