--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "bootstrap": "^5.3.0",
+    "font-awesome": "^4.7.0",
     "pinia": "^2.0.36",
     "sass": "^1.63.4",
     "vue": "^3.3.2",
